# secretsantabot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  VERSION  docker-compose.yml  pyproject.toml
app/: __init__.py  models.py  routes.py
app/templates/: admin_dashboard.html  admin_login.html  base.html  index.html  register.html  reveal.html
dev-tools/: README.md  debug_password.py  generate_password_hash.py  seed_database.py  seed_database.sql
docs/: CHANGELOG_SECURITY.md  DEVELOPMENT.md  FIX_UBUNTU_LOGIN.md  QUICK_START.md  SECURITY.md  TROUBLESHOOTING.md  VERSIONING.md
