[project]
name = "secretsantabot"
version = "0.1.0"
description = "A Secret Santa gift exchange bot with Flask"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
